--- a/static/table_of_contents.css
+++ b/static/table_of_contents.css
@@ -15,6 +15,8 @@
     padding-top: 0;
     left: 0;
     max-width: 20vw;
+    z-index: 1000;
+    backdrop-filter: blur(3px);
   }
 }
 
